name:                ah-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ah-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Protolude.Extended
                     , Regex
                     , PCREcompile
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , bytestring
                     , containers
                     , random
  include-dirs:        include
  includes:            mymath.h
  c-sources:           cbits/mymath.c
  install-includes:    mymath.h
  extra-libraries:     pcre
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

executable ah-ffi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protolude
                     , ah-ffi
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

test-suite ah-ffi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ah-ffi
                     , protolude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , DuplicateRecordFields
                     , LambdaCase
                     , TupleSections
                     , NamedFieldPuns
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeApplications
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/githubuser/ah-ffi
